--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -7,13 +7,14 @@
     <string name="hello_world">Hello world!</string>
     <string name="settings">设置</string>
 
-    
     <!-- 班报填写 -->
     <string name="tourreport_holenumber_title">孔号</string>
     <string name="tourreport_rigmachine_title">钻机</string>
     <string name="tourreport_date_title">日期</string>
     <string name="tourreport_time_title">时间</string>
     <string name="tourreport_time_span_title">至</string>
+    <string name="tourreport_workcontent_new">填写工作内容</string>
+    <string name="tourreport_takeover_new">填写交接说明</string>
     <string name="tourreport_workcontent_title">工作内容</string>
     <string name="tourreport_upleft_title">上余</string>
     <string name="tourreport_drilllength_title">进尺</string>
@@ -26,7 +27,6 @@
     <string name="tourreport_fangxie_step">防斜措施</string>
     <string name="tourreport_fuzhengqichang">扶正器长</string>
     <string name="tourreport_handle_drilling_tools">交接钻具</string>
-    
     <string name="tourreport_time_statistic">时间统计</string>
     <string name="tourreport_drilling_time">纯钻</string>
     <string name="tourreport_auxiliary_time">辅助</string>
@@ -34,14 +34,26 @@
     <string name="tourreport_device_repair_time">设备</string>
     <string name="tourreport_other_time">其他</string>
     <string name="tourreport_summary_time">合计</string>
-    
     <string name="tourreport_total_drillinglength">进尺</string>
     <string name="tourreport_total_corelength">取心</string>
     <string name="tourreport_total_holedeep">孔深</string>
     <string name="tourreport_onduty">出勤人员</string>
+    <string name="tourreport_time_to">至</string>
+
     
-    
-    
+    <!-- 填写工作内容的界面 -->
+    <string name="workcontent_upleft_hint">填写上余数量</string>
+    <string name="workcontent_drillinglength_hint">填写进尺数量</string>
+    <string name="workcontent_holedeep_hint">填写当前孔深</string>
+    <string name="workcontent_corelength_hint">填写岩心长度</string>
+    <string name="workcontent_pressure_hint">填写钻压数量</string>
+    <string name="workcontent_rotatespeed_hint">填写钻机转速</string>
+    <string name="workcontent_pump_hint">填写泵量</string>
+    <string name="workcontent_save">保存</string>
+    <string name="mile">m</string>
+    <string name="kilogram">kg</string>
+    <string name="rotatespeed">r/min</string>
+    <string name="L">L/min</string>
     
     
     <!-- 底部公共菜单模块 -->
@@ -51,8 +63,6 @@
     <string name="menu_bottom_4">统计分析</string>
     <string name="menu_more">菜单4</string>
     <string name="title_activity_calculator">CalculatorActivity</string>
-    
-    
-    
-    
+    <string name="title_activity_workcontent">WorkcontentActivity</string>
+
 </resources>
