add workcontent bean

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -16,13 +16,13 @@
     <string name="tourreport_workcontent_new">填写工作内容</string>
     <string name="tourreport_takeover_new">填写交接说明</string>
     <string name="tourreport_workcontent_title">工作内容</string>
-    <string name="tourreport_upleft_title">上余</string>
-    <string name="tourreport_drilllength_title">进尺</string>
-    <string name="tourreport_holedeep_title">孔深</string>
-    <string name="tourreport_drilling_pressure_title">钻压</string>
-    <string name="tourreport_rotate_speed_title">转速</string>
-    <string name="tourreport_pump_title">泵量</string>
-    <string name="tourreport_core_length_title">心长</string>
+    <string name="tourreport_upleft_title">上余(m)</string>
+    <string name="tourreport_drilllength_title">进尺(m)</string>
+    <string name="tourreport_holedeep_title">孔深(m)</string>
+    <string name="tourreport_drilling_pressure_title">钻压(kg)</string>
+    <string name="tourreport_rotate_speed_title">转速(r/min)</string>
+    <string name="tourreport_pump_title">泵量(L)</string>
+    <string name="tourreport_core_length_title">心长(m)</string>
     <string name="tourreport_takeover_instruction">交接说明</string>
     <string name="tourreport_fangxie_step">防斜措施</string>
     <string name="tourreport_fuzhengqichang">扶正器长</string>
