--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -13,15 +13,16 @@
     <string name="tourreport_date_title">日期</string>
     <string name="tourreport_time_title">时间</string>
     <string name="tourreport_time_span_title">至</string>
-    <string name="tourreport_workcontent_new">填写工作内容</string>
-    <string name="tourreport_takeover_new">填写交接说明</string>
+    <string name="tourreport_workcontent_new">工作内容</string>
+    <string name="tourreport_takeover_new">交接说明</string>
     <string name="tourreport_workcontent_title">工作内容</string>
+    <string name="tourreport_btn_submit_title">  提交     </string>
     <string name="tourreport_upleft_title">上余(m)</string>
     <string name="tourreport_drilllength_title">进尺(m)</string>
     <string name="tourreport_holedeep_title">孔深(m)</string>
     <string name="tourreport_drilling_pressure_title">钻压(kg)</string>
     <string name="tourreport_rotate_speed_title">转速(r/min)</string>
-    <string name="tourreport_pump_title">泵量(L)</string>
+    <string name="tourreport_pump_title">泵量(L/min)</string>
     <string name="tourreport_core_length_title">心长(m)</string>
     <string name="tourreport_takeover_instruction">交接说明</string>
     <string name="tourreport_fangxie_step">防斜措施</string>
