tourreport list modify

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -29,12 +29,12 @@
     <string name="tourreport_fuzhengqichang">扶正器长</string>
     <string name="tourreport_handle_drilling_tools">交接钻具</string>
     <string name="tourreport_time_statistic">时间统计</string>
-    <string name="tourreport_drilling_time">纯钻</string>
-    <string name="tourreport_auxiliary_time">辅助</string>
-    <string name="tourreport_holeinner_time">孔内</string>
-    <string name="tourreport_device_repair_time">设备</string>
-    <string name="tourreport_other_time">其他</string>
-    <string name="tourreport_summary_time">合计</string>
+    <string name="tourreport_drilling_time">纯钻时长</string>
+    <string name="tourreport_auxiliary_time">辅助时长</string>
+    <string name="tourreport_holeinner_time">孔内事故</string>
+    <string name="tourreport_device_repair_time">设备事故</string>
+    <string name="tourreport_other_time">其他时长</string>
+    <string name="tourreport_summary_time">总时长</string>
     <string name="tourreport_total_drillinglength">进尺</string>
     <string name="tourreport_total_corelength">取心</string>
     <string name="tourreport_total_holedeep">孔深</string>
