modify tourreport add

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="settings">设置</string>
 
     <!-- 班报填写 -->
+    <string name="tourreport_minearea_title">矿区</string>
     <string name="tourreport_holenumber_title">孔号</string>
     <string name="tourreport_rigmachine_title">钻机</string>
     <string name="tourreport_date_title">日期</string>
@@ -16,7 +17,8 @@
     <string name="tourreport_workcontent_new">工作内容</string>
     <string name="tourreport_takeover_new">交接说明</string>
     <string name="tourreport_workcontent_title">工作内容</string>
-    <string name="tourreport_btn_submit_title">  提交     </string>
+    <string name="tourreport_btn_submit_title">提交</string>
+    <string name="tourreport_btn_reset_title">重置</string>
     <string name="tourreport_upleft_title">上余(m)</string>
     <string name="tourreport_drilllength_title">进尺(m)</string>
     <string name="tourreport_holedeep_title">孔深(m)</string>
@@ -59,13 +61,13 @@
     <!-- 填写交接说明 -->
     <string name="takeover_title">交接说明\n或者记事</string>
     <string name="takeover_desc_hint">填写交接说明</string>
-    <string name="faxie_title">防斜\n措施</string>
+    <string name="faxie_title">防斜措施</string>
     <string name="faxie_hint">输入防斜措施</string>
-    <string name="fuzheng_title">扶正\n器长(m)</string>
+    <string name="fuzheng_title">扶正器长(m)</string>
     <string name="fuzheng_hint">输入扶正器长</string>
-    <string name="takeover_tools_title">交接\n钻具</string>
+    <string name="takeover_tools_title">钻具交接</string>
     <string name="takeover_tools_hint">1个单根，长：3.02m：①3.02②     ③  ；41个立根， 长：371.87m。</string>
-    <string name="onduty_title">出勤\n人员</string>
+    <string name="onduty_title">出勤人员</string>
     <string name="onduty_hint">输入出勤人员</string>
 
     <!-- 底部公共菜单模块 -->
