--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -113,4 +113,12 @@
     <!--  班报列表界面 -->
     <string name="title_tourreport_image_flag">班报状态的标识图片</string>
 
+    
+    
+    <string name="xlistview_header_hint_normal">下拉刷新</string>
+    <string name="xlistview_header_hint_ready">松开刷新数据</string>
+    <string name="xlistview_header_hint_loading">正在加载...</string>
+    <string name="xlistview_header_last_time">上次更新时间：</string>
+    <string name="xlistview_footer_hint_normal">查看更多</string>
+    <string name="xlistview_footer_hint_ready">松开载入更多</string>
 </resources>
